feat: calculate situation function